--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,8 @@ jobs:
           ./create_mod.sh || exit 1
           VERSION=$(sed -n 's/^versionCode=//p' module.prop)
           echo "VERSION=$VERSION" >>"$GITHUB_OUTPUT"
-          CHANGELOG=$(
+          {
+            echo "CHANGELOG<<EOF"
             FLAG=false
             while IFS= read -r line; do
               if echo "$line" | grep -qs "^###"; then
@@ -27,8 +28,8 @@ jobs:
               fi
               echo "$line"
             done <CHANGELOG.md
-          )
-          echo "CHANGELOG=$CHANGELOG" >>"$GITHUB_OUTPUT"
+            echo "EOF"
+          } >>"$GITHUB_OUTPUT"
 
       - name: Update the module
         uses: stefanzweifel/git-auto-commit-action@v4
