--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         if: ${{ steps.create.outputs.VERSION != '' }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Update to ${{ steps.create.outputs.VERSION }}
+          commit_message: Bump version to ${{ steps.create.outputs.VERSION }}
 
       - name: Release
         id: release
@@ -57,4 +57,4 @@ jobs:
         if: ${{ steps.create.outputs.VERSION != '' }}
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Update update.json to ${{ steps.create.outputs.VERSION }}
+          commit_message: Bump update.json to ${{ steps.create.outputs.VERSION }}
